--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/output.css')
   body(class="bg-black text-white")
-    nav
+    nav(class="mb-10")
       .logo-container(class="flex justify-center gap-4 pt-10")
         img(src="/images/logo.png" class="w-24 h-auto")
         p(class="text-4xl") COLDSTORE
