--- a/views/categories.pug
+++ b/views/categories.pug
@@ -1,4 +1,5 @@
 extends layout
+include mixins/listCard
 
 block content
   ul(class="flex justify-center text-3xl gap-8 cursor-pointer")
@@ -11,9 +12,12 @@ block content
   //- List of categories
   //- Heading
   div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80")
-    ul(class="flex justify-between p-10")
-      li(class="text-slate-400 text-3xl") Categories 
+    ul(class="flex justify-center p-10")
       li 
-        button(class="flex bg-yellow-500 items-center border-2 rounded-xl gap-4 p-2 px-4") 
+        button(class="flex bg-yellow-500 items-center border-2 rounded-xl gap-4 p-2 px-6") 
           img(src='/images/plus-circle.png')
-          p New
+          p(class="text-2xl") New
+    div.flex.flex-col.gap-3
+      +listCard("Chicken")
+      +listCard("Chicken")
+      +listCard("Chicken")
