--- a/views/categories.pug
+++ b/views/categories.pug
@@ -1,15 +1,9 @@
 extends layout
 include mixins/listCard
-include mixins/loaderIcon
+include mixins/nav
 
 block content
-  ul(class="flex justify-center text-3xl gap-8 cursor-pointer")
-    .left-nav(class="flex gap-5")
-      li(class="p-4 border-2 border-transparent bg-custom-yellow text-blue-600 rounded-t-3xl ml-2") Categories 
-      li(class="p-4") Items 
-    .right-nav(class="flex gap-5")
-      li(class="p-4") Add Categories 
-      li(class="p-4") Add Items 
+  +nav("categories")
   //- Content
   //- Heading
   div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 rounded-t-3xl")
@@ -20,6 +14,5 @@ block content
           p(class="text-2xl") New
     //- list of categories
     div.flex.flex-col.gap-3
-      +listCard("Chicken")
-      +listCard("Chicken")
-      +listCard("Chicken")
+      each category in categories_list
+        +listCard(category.name)
