--- a/views/categories.pug
+++ b/views/categories.pug
@@ -1,10 +1,15 @@
 extends layout
 include mixins/listCard
 include mixins/nav
+include mixins/overlay
 
 block content
+  //- overlay background with category details
+  +overlay("Chicken", "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem dolores veniam molestias minus commodi atque distinctio nostrum velit, nobis expedita error ad iure? Inventore veniam eos tempora et quis ut! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.")
+
+  //- navigation from mixins
   +nav("categories")
-  //- Content
+
   //- Heading
   div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 rounded-t-3xl")
     ul(class="flex justify-center p-10")
@@ -12,6 +17,7 @@ block content
         button(class="flex bg-yellow-500 items-center border-2 rounded-xl gap-4 p-2 px-6") 
           img(src='/images/plus-circle.png')
           p(class="text-2xl") New
+    
     //- list of categories
     div.flex.flex-col.gap-3
       each category in categories_list
