create single category page

--- a/views/categories.pug
+++ b/views/categories.pug
@@ -1,11 +1,9 @@
 extends layout
 include mixins/listCard
 include mixins/nav
-include mixins/overlay
 
 block content
   //- overlay background with category details
-  //- +overlay("Chicken", "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem dolores veniam molestias minus commodi atque distinctio nostrum velit, nobis expedita error ad iure? Inventore veniam eos tempora et quis ut! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.")
 
   //- navigation from mixins
   +nav("categories")
@@ -17,8 +15,22 @@ block content
         button(class="flex bg-yellow-500 items-center border-2 rounded-xl gap-4 p-2 px-6") 
           img(src='/images/plus-circle.png')
           p(class="text-2xl") New
+
+    //- if we are looking at a single category
+    if category 
+      div(class="max-w-3xl flex flex-col gap-4 my-0.5 mx-auto bg-black px-10 py-10")
+        div(class="top flex gap-5 justify-start items-center")
+          p(class="")
+            a(href="../../store/categories")
+              img(src="/images/back.png", alt="go back arrow")
+          p(class="text-4xl text-white") #{category.name}
+        div(class="middle")
+          p(class="text-gray-500 text-2xl") #{category.description}
+        div(class="bottom")
+          a(href="../../store/items" class="text-yellow-500 underline text-2xl") View Items
+    else 
+      //- list of categories
+      div.flex.flex-col.gap-3
+        each category in categories_list
+          +listCard(category)
     
-    //- list of categories
-    div.flex.flex-col.gap-3
-      each category in categories_list
-        +listCard(category)
