--- a/views/mixins/categoriesList.pug
+++ b/views/mixins/categoriesList.pug
@@ -1,4 +1,4 @@
-mixin listCard(category)
+mixin categoriesList(category)
     div(id="card-container" class="flex justify-between items-center px-10 py-2 mx-20 border-2 border-gray-400 bg-white")
         p(class="text-blue-500 text-4xl") #{category.name}
         ul(class="icon flex items-center gap-4 cursor-pointer") 
