--- a/views/items.pug
+++ b/views/items.pug
@@ -20,11 +20,13 @@ block content
                     a(href="/store/item/create" class="flex items-center gap-4") 
                         img(src="/images/plus-circle.png")
                         p(class="text-2xl") New
-        if category_id //if a items in a particular category is searched 
+        //- if items in a particular category is searched 
+        if category_id 
             div(class="categories-cards flex flex-col gap-7 mx-20")
                 each item in filtered_items_list
                     +itemsList(item)
-        else // if all items in the database is searched
+        //- if all items in the database is searched
+        else 
             div(class="categories-cards flex flex-col gap-7 mx-20")
                 each item in items_list
                     +itemsList(item)
