--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -5,7 +5,7 @@ block content
     +nav("add-category")
 
     //- Heading
-    div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 over-scroll rounded-t-3xl")
+    div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 overflow-scroll rounded-t-3xl")
         p(class="text-5xl px-10 py-8 mx-10 text-slate-400") Add Category
         
         if errors
