create update category functionality

--- a/views/categories.pug
+++ b/views/categories.pug
@@ -9,7 +9,7 @@ block content
   +nav("categories")
 
   //- Heading
-  div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 over-scroll rounded-t-3xl")
+  div(class="container max-w-7xl mx-auto bg-custom-yellow h-custom-screen-80 overflow-scroll rounded-t-3xl")
     ul(class="flex justify-center p-10") 
       li 
         button(class="flex bg-yellow-500 items-center border-2 rounded-xl gap-4 p-2 px-6") 
