--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -13,15 +13,15 @@ block content
                 ul(class="error-message px-10 mx-10 flex gap-2") 
                     li(class="text-red-600 text-xl") #{error.msg}
 
-        form(class="flex flex-col gap-10 px-20" method="post" action="/store/category/create")
+        form(class="flex flex-col gap-10 px-20" method="post")
             div(class="name-container flex flex-col gap-2")
                 label(for="category_name" class="text-black text-4xl") Name *
                 p(class="text-slate-400 text-xl") 100 characters max
-                input(id="category_name", name="name" type="text" class="w-3/5 p-3 border text-2xl border-gray-400 rounded-2xl text-black focus:border-yellow-500 outline-none" minLength="1" maxLength="100" required)
+                input(id="category_name", name="name" value=(category ? category.name: "") type="text" class="w-3/5 p-3 border text-2xl border-gray-400 rounded-2xl text-black focus:border-yellow-500 outline-none" minLength="1" maxLength="100" required)
             div(class="description-container flex flex-col gap-2")
                 label(for="category_description" class="text-black text-4xl") Description *
                 p(class="text-slate-400 text-xl") 100 characters min
-                textarea(id="category_description" name="description", class="w-3/5 p-3 border text-2xl rounded-2xl border-gray-400 text-black focus:border-yellow-500 outline-none" rows="15" minLength="100" required)
+                textarea(id="category_description" name="description", class="w-3/5 p-3 border text-2xl rounded-2xl border-gray-400 text-black focus:border-yellow-500 outline-none" rows="15" minLength="100" required) #{category ? category.description : ""}
             button(class="flex bg-yellow-500 justify-center py-3 px-5 w-1/5 gap-3 text-3xl font-bold border rounded-2xl") 
                 img(src="/images/mark.png") 
                 p Publish
