--- a/views/mixins/nav.pug
+++ b/views/mixins/nav.pug
@@ -9,4 +9,4 @@ mixin nav(name)
             li(class=(name === 'add-category' ? 'active': 'p-4'))
                 a(href="../../store/category/create") Add Categories 
             li(class=(name === 'add-item' ? 'active': 'p-4')) 
-                a(href="../../store/item/create") Add Items
+                a(href="/store/item/create") Add Items
