--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -24,5 +24,5 @@ block content
                 textarea(id="category_description" name="description", class="w-3/5 p-3 border text-2xl rounded-2xl border-gray-400 text-black focus:border-yellow-500 outline-none" rows="15" minLength="100" required) #{category ? category.description : ""}
             button(class="flex bg-yellow-500 justify-center py-3 px-5 w-1/5 gap-3 text-3xl font-bold border rounded-2xl") 
                 img(src="/images/mark.png") 
-                p Publish
+                p #{category ? "Update": "Publish"}
                 
