--- a/views/mixins/itemsList.pug
+++ b/views/mixins/itemsList.pug
@@ -13,5 +13,5 @@ mixin itemsList(item)
             div(class="update-and-delete flex justify-end gap-2")
                 a(href=`/store${item.url}/update` class="hover:bg-red-400 rounded-xl")
                     img(src="/images/edit.png" class="w-10 h-auto")
-                a(href="/store/item/create" class="hover:bg-red-400 rounded-xl")
+                a(href=`/store${item.url}/delete` class="hover:bg-red-400 rounded-xl")
                     img(src="/images/delete.png" class="w-10 h-auto")
